# ft-lineone

./: .env.example  .gitignore  README.md  fix_home.ps1  ingest_scrapers.py  opencode.json  opencode.md  render.yaml
.obsidian/: app.json  appearance.json  core-plugins-migration.json  core-plugins.json  workspace.json
backend/: Dockerfile  entrypoint.sh  ft_lineone.db  pyproject.toml  requirements.txt
docs/: PLAN_MEJORA_PERFORMANCE.md  api.md  architecture.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
ft-lineone-main/: atlas-credentials.env  cone.MD
notas/: API Endpoints.md  Arquitectura.md  Backend — Detalle Técnico.md  Bienvenida.md  Frontend.md  Performance & Deuda Técnica.md  Scrapers.md  Setup y Desarrollo.md  VTON.md
scrapers/: Dockerfile  SECURITY_FIX_M1_M2.md  SECURITY_FIX_M3.md  SECURITY_FIX_M4.md  SECURITY_FIX_M5.md  (+3 more)
workers/: README.md  pylock.toml  pyproject.toml  schema.sql  test_body.json  wrangler.jsonc
workers/migrations/: 0001_add_gender_and_indexes.sql
workers/python_modules/: asgi.py
workers/python_modules/anyio-4.14.1.dist-info/: RECORD
workers/python_modules/bcrypt-4.3.0.dist-info/: METADATA  RECORD
workers/python_modules/email_validator-2.3.0.dist-info/: RECORD
workers/python_modules/fastapi-0.138.2.dist-info/: RECORD
workers/python_modules/httpx-0.28.1.dist-info/: RECORD
workers/python_modules/idna-3.18.dist-info/: RECORD
workers/python_modules/workers/: __init__.py  _workers.py
workers/python_modules/workers_runtime_sdk-1.5.1.dist-info/: METADATA  RECORD
workers/src/: __init__.py  cron.py  entry.py
workers/src/middleware/: security.py  usage_limit.py
workers/src/models/: __init__.py  product.py  user.py  vton_result.py
workers/src/routes/: auth.py  favorites.py  payments.py  products.py  recommendations.py  scrapers.py  users.py  vton.py
workers/src/scrapers/: falabella.py  fashionpark.py  hites.py  hm.py  maui.py  paris.py  ripley.py  scheduler.py  zara.py
workers/src/services/: auth.py  config.py  database.py  image_compressor.py  image_upload.py  llm.py  r2.py  vton.py  youcam.py
workers/tests/: conftest.py  test_auth.py  test_auth_routes.py  test_config.py  test_config_completeness.py  test_entry.py  test_llm.py  test_middleware_helpers.py  test_security.py  test_usage_limit.py
(+256 files in other folders)
