[project]
name = "ft-lineone-workers"
version = "2.0.0"
description = "FT-LineOne API - Cloudflare Workers"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "pydantic[email]",
    "bcrypt",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "pillow",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "workers-py",
    "workers-runtime-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
