[project]
name = "ft-lineone-workers"
version = "2.0.0"
description = "FT-LineOne API - Cloudflare Workers"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "pydantic[email]",
    "httpx",
    "beautifulsoup4",
    "python-multipart",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
